# mitmmock

./: README.md  pyproject.toml
examples/: dump.mitmmock  mitmmock_dump.py  mitmmock_replay.py  user.py
mitmmock/: __init__.py  dump.py  mitmmock.py
tools/: evaluate_requests.sh  generate_request_chain.sh
